' Generated by UML Generator
' Encoded: ZLN1Rjim3BtxAtHq5hlOEHYA1iq652YAOCrjs46HEO-OB1cIN63h-k-JR4cMb27e9OWVAJxoFSg-quOgCmsyqhzGZ5JHWJ1EjTuRe_0y6NXWKZpZ7o0Vgv_O0M6e68UgchF8FKSG1iXhHKWhv71Mi2FFzgZe7N9uUaWVwGYSOoTr2ZAf5CWKwL01OoX52XhWFtO4XN4FhVtPUkuwfsr8GjgG2yg6v8GDkQ1hI2JRE28DPk6eDplo8h7pe2Kga7rWA_3xcR8y7dWB_6J9KwW7ynJfeo0EzWraMDP25bcRo8kaRMIHq8WJ_IquFb0KiztRLxix1jdR3DLKzL7ZRzz3-_7O4JhRbD-JQLWUevziiN8NzibXevBTn8npRgyK_Vs8sdmwUl0sRi5IgSvhMfEBYhEHj5VGKnMAr3Ov_4_qPfIpYLDraePoDtydfpDtFMqvkliIpXGI3r8RHTLNqDC0gwbM0dfs4MQ8ryAVJs-Dmz9r7wqfA1DkFsre_V9KG_8pLrVtEAU-RylMt5M8e96FZPcGFctrteSEsAELT1dRq84AUG3DuXPmP20OqbI7R6fVuEhmi_j5yOQKfOCufpcn4EVH9nVod6BHS2aMF4ttZL-C_WKrCcyuiti2dyNB5NkNz7UOxDvcPRLDVEaiaMAC55wTylVpGzl6E-WXQQ7GLnLNz-RczX8D1hVjt_z4lGPvy0v4Ppy__m0
' URL: http://www.plantuml.com/plantuml/uml/ZLN1Rjim3BtxAtHq5hlOEHYA1iq652YAOCrjs46HEO-OB1cIN63h-k-JR4cMb27e9OWVAJxoFSg-quOgCmsyqhzGZ5JHWJ1EjTuRe_0y6NXWKZpZ7o0Vgv_O0M6e68UgchF8FKSG1iXhHKWhv71Mi2FFzgZe7N9uUaWVwGYSOoTr2ZAf5CWKwL01OoX52XhWFtO4XN4FhVtPUkuwfsr8GjgG2yg6v8GDkQ1hI2JRE28DPk6eDplo8h7pe2Kga7rWA_3xcR8y7dWB_6J9KwW7ynJfeo0EzWraMDP25bcRo8kaRMIHq8WJ_IquFb0KiztRLxix1jdR3DLKzL7ZRzz3-_7O4JhRbD-JQLWUevziiN8NzibXevBTn8npRgyK_Vs8sdmwUl0sRi5IgSvhMfEBYhEHj5VGKnMAr3Ov_4_qPfIpYLDraePoDtydfpDtFMqvkliIpXGI3r8RHTLNqDC0gwbM0dfs4MQ8ryAVJs-Dmz9r7wqfA1DkFsre_V9KG_8pLrVtEAU-RylMt5M8e96FZPcGFctrteSEsAELT1dRq84AUG3DuXPmP20OqbI7R6fVuEhmi_j5yOQKfOCufpcn4EVH9nVod6BHS2aMF4ttZL-C_WKrCcyuiti2dyNB5NkNz7UOxDvcPRLDVEaiaMAC55wTylVpGzl6E-WXQQ7GLnLNz-RczX8D1hVjt_z4lGPvy0v4Ppy__m0
' Generated on: 2025-11-26T13:50:49.586231800

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -nombre: String
  -DNI: String
  -apellidos: String
  -correo: String
  -direccion: String
  -telf: int
  --
  +Cliente(nombre: String, DNI: String, apellidos: String, correo: String, direccion: String, telf: int)
  +setnombre(): void
  +setDNI(): void
  +setApellidos(): void
  +setCorreo(): void
  +setDireccion(): void
  +setTelf(): void
  +getNombre(): String
  +getDNI(): String
  +getApellidos(): String
  +getCorreo(): String
  +getDireccion(): String
  +getTelf(): int
}

class main {
  +{static} main(args: String[]): void
}

class Pedido {
  -numPedido: int
  -cliente: Cliente
  -productos: ArrayList<Producto>
  --
  +Pedido(numPedido: int, cliente: Cliente)
  +agregarProducto(o: Producto): void
  +calcularTotal(): double
  +listarProductos(): String
  +mostrarResumen(): void
}

abstract class Producto {
  -nombreProd: String
  -precio: double
  --
  +Producto(nombreProd: String, precio: double)
  +setnombre(): void
  +setPrecio(): void
  +getNombre(): String
  +getPrecio(): double
  +calcularPrecio(p: Producto): double
}

class ProductoDigital {
  -tamanoDesc: int
  -licencia: String
  --
  +ProductoDigital(nombreProd: String, precio: int, tamanoDesc: int, licencia: String)
  +setTamano(): void
  +setLicencia(): void
  +getTamanoDesc(): int
  +getLicencia(): String
}

class ProductoFisico {
  -costeEnvio: double
  --
  +ProductoFisico(nombreProd: String, precio: double, costeEnvio: double)
  +setCosteEnv(): void
  +getCosteEnv(): double
}

Pedido *-- Cliente
Pedido o-- Producto
Producto ..> Producto
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml